# AutoSettings

./: .gitignore  AutoSettings.sln  CMakeLists.txt
AutoSettings/: ArrayDator.h  AutoPointer.h  AutoPointerBaseType.h  AutoSetting.cpp  AutoSetting.h  AutoSettingAdapter.cpp  AutoSettingAdapter.h  AutoSettingApi.cpp  AutoSettingApi.h  AutoSettingCore.h  AutoSettingEntry.cpp  AutoSettingEntry.h  AutoSettingGroup.h  AutoSettingSerializerOut.cpp  AutoSettingSerializerOut.h  AutoSettings.vcxproj  AutoSettings.vcxproj.filters  Dator.h  DatorArray.h  DatorConstants.h  HeapBuffer.cpp  HeapBuffer.h  IDator.h  ISerial.h  Serial.cpp  SerialBase.cpp  SerialBase.h  SerialIn.cpp  SerialIn.h  SerialOut.cpp  SerialOut.h  StandardLib.h  Util.h
AutoSettingsTest/: AutoSettingsTest.vcxproj  main.cpp  test2.ini
src/: CMakeLists.txt
src/AutoSettingTest/: CMakeLists.txt
src/AutoSettingTest/src/: AS_DOUBLE_Test.cpp  AS_INT_Test.cpp  AutoSettingsTests.cpp  main.cpp
src/AutoSettings/: CMakeLists.txt
src/AutoSettings/include/AutoSettings/: AutoSettingApi.h
src/AutoSettings/src/: AS_String.cpp  AS_String.h  AutoSetting.cpp  AutoSetting.h  AutoSettingAdapter.cpp  AutoSettingAdapter.h  AutoSettingApi.cpp  AutoSettingEntry.cpp  AutoSettingEntry.h  AutoSettingGroup.cpp  AutoSettingGroup.h  AutoSettingSerializerIn.cpp  AutoSettingSerializerIn.h  AutoSettingSerializerOut.cpp  Dator.h  ISerial.h  SerialBase.h  SerialIn.cpp  SerialOut.cpp  SerialOut.h  StandardLib.h  Util.h
src/include/AutoSettings/: AutoSettingApi.h  AutoSettingCore.h  IDator.h
